--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,21 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 </head>
 <body>
+  <nav class='navbar navbar-default'>
+    <div class='container'>
+      <ul class='nav navbar-nav'>
+        <li class='navbar-brand'>Rickbox</li>
+        <% if current_user %>
+        <li><%= link_to 'Films', films_path %></li>
+        <li><%= link_to 'My Rentals', rentals_path %></li>
+        <li><%= link_to 'Sign Out', sign_out_path %></li>
+        <% else %>
+        <li><%= link_to 'Sign In', sign_in_path %></li>
+        <li><%= link_to 'Sign Up', sign_up_path %></li>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
   <div class='container'>
 
     <%= yield %>
