--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -3,10 +3,10 @@
 <table class='table'>
   <thead>
     <tr>
-      <th name='title'>Title</th>
-      <th name='rating'>Rating</th>
-      <th name='genre'>Genre</th>
-      <th name='available'>Available?</th>
+      <th class='films' name='title'>Title</th>
+      <th class='films' name='rating'>Rating</th>
+      <th class='films' name='genre'>Genre</th>
+      <th class='films' name='available'>Available?</th>
     </tr>
   </thead>
   <tbody>
