--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <nav class='navbar navbar-default'>
     <div class='container'>
       <ul class='nav navbar-nav'>
-        <li class='navbar-brand'>Rickbox</li>
+        <li><%= link_to 'Rickbox', root_path, class: 'navbar-brand' %></li>
         <% if current_user %>
         <li><%= link_to 'Films', films_path %></li>
         <li><%= link_to 'My Rentals', rentals_path %></li>
