--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,13 +1,17 @@
 <h2>Sign Up</h2>
-<%= form_for @user do |f| %>
-  <%= f.label :email %>
-  <%= f.text_field :email, class: 'form-control' %>
+<div class='row'>
+  <div class='col-md-3'>
+    <%= form_for @user do |f| %>
+      <%= f.label :email %>
+      <%= f.text_field :email, class: 'form-control' %>
 
-  <%= f.label :password %>
-  <%= f.password_field :password, class: 'form-control' %>
+      <%= f.label :password %>
+      <%= f.password_field :password, class: 'form-control' %>
 
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation, class: 'form-control' %>   
+      <%= f.label :password_confirmation, 'Confirm Password' %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>   
 
-  <%= f.submit 'Sign Up', class: 'btn btn-default' %> 
-<% end %>
+      <%= f.submit 'Sign Up', class: 'btn btn-default' %> 
+    <% end %>
+  </div>
+</div>
