Refactor into services and add flash messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,9 @@
     </div>
   </nav>
   <div class='container'>
+    <% flash.each do |name, msg| %>
+      <%= content_tag :div, msg %>
+    <% end %>
 
     <%= yield %>
 
