Add notification style

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -23,3 +23,17 @@ input {
 .rentals {
   margin-top: 3em;
 }
+
+.notifications {
+  padding: .5em;
+  font-size: 1.2em;
+  color: white;
+  background-color: orange;
+  opacity: .7;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.notifications:hover {
+  cursor: pointer;
+}
