--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
   </nav>
   <div class='container'>
     <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg %>
+      <%= content_tag :div, msg, class: 'notifications' %>
     <% end %>
 
     <%= yield %>
