--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,10 @@
       </ul>
     </div>
   </nav>
+  <% flash.each do |name, msg| %>
+    <%= content_tag :div, msg, class: 'notifications', id: name %>
+  <% end %>
   <div class='container'>
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, class: 'notifications' %>
-    <% end %>
 
     <%= yield %>
 
